--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
   }
 
   main {
-    @apply container p-4 md:p-0;
+    @apply container;
   }
   h1 {
     @apply text-2xl md:text-3xl font-bold mb-4;
