--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,14 @@
     @apply text-2xl md:text-3xl font-bold mb-4;
   }
 
+  h2 {
+    @apply text-xl md:text-2xl font-bold mb-4;
+  }
+
+  button {
+    @apply disabled:opacity-50;
+  }
+
   img.artwork {
     @apply rounded-lg drop-shadow-xl;
   }
